--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -26,8 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install, lint and test
       run: |
-        yarn install
-        yarn lint
-        yarn test
+        npm install
+        npm run test
       env:
         CI: true
