--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "secrets",
   "version": "1.0.0",
   "description": "Secret handler for Node.js 🗝️",
-  "main": "dist",
+  "main": "src",
   "scripts": {
-    "build": "babel src --out-dir dist --delete-dir-on-start --verbose",
-    "dev": "npm run build && npm run test",
-    "lint": "eslint src",
+    "lint": "eslint .",
     "test": "jest"
   },
   "license": "MIT",
@@ -32,14 +30,14 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.4.0",
-    "prettier": "^2.0.4"
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5"
   },
   "babel": {
     "presets": [
@@ -47,7 +45,7 @@
         "@babel/preset-env",
         {
           "targets": {
-            "node": "4.0.0"
+            "node": "8.0.0"
           }
         }
       ]
