--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install, lint and test
       run: |
-        npm install
-        npm run test
+        yarn install --frozen-lockfile
+        yarn test
       env:
         CI: true
